--- a/jackson-json-reference-core/src/test/resources/body_to_ref_recursive.yaml
+++ b/jackson-json-reference-core/src/test/resources/body_to_ref_recursive.yaml
@@ -1,3 +1,7 @@
+swagger: '2.0'
+info:
+  version: 0.0.0
+  title: API
 paths:
   /api:
     post:
@@ -6,12 +10,12 @@ paths:
           name: foo
           schema:
             $ref: '#/definitions/foo'
+      responses:
+        200:
+          description: response
 definitions:
   foo:
     type: object
     properties:
-      bar:
-        $ref: '#/definitions/bar'
-  bar:
-    type: string
-
+      foo:
+        $ref: '#/definitions/foo'
